--- a/style.css
+++ b/style.css
@@ -38,3 +38,12 @@ h1 {
     font-size: larger;
     margin: 2px;
 }
+
+#button {
+    margin-top: 20px;
+    margin-left: 40%;
+    font-size: 20px;
+    margin-bottom: 10px;
+    padding: 5px;
+    cursor: pointer;
+}
