--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 body {
-    background-color: rgb(7, 33, 120);
-    color: white;
-    font-family: 'Roboto', sans-serif;
+    background-color: rgb(235, 199, 132);
+    color: black;
+    font-family: Georgia;
+    font-size: 35px;
     max-width: 1400px;
     margin: 0 auto;
 }
 
 h1 {
-    color: white;
+    color: black;
     text-align: center;
     font-size: 40px;
     margin-top: 20px;
@@ -18,7 +19,7 @@ h1 {
 #numbers-container {
     border-style: solid;
     border-width: 3px;
-    border-color: rgb(60, 117, 140);
+    border-color: black;
     padding: 12px;
     border-radius: 25px;
     display: inline-block;
@@ -27,12 +28,12 @@ h1 {
 }
 
 .numbers {
-    background-color: rgb(7, 33, 120);
+    background-color: rgb(235, 199, 132);
     display: inline-block;
     width: 100px;
     height: 100px;
     line-height: 100px;
-    border: 2px solid rgb(122, 187, 31);
+    border: 2px solid black;
     border-radius: 10px;
     text-align: center;
     font-size: larger;
@@ -46,4 +47,9 @@ h1 {
     margin-bottom: 10px;
     padding: 5px;
     cursor: pointer;
+}
+
+.selected-number {
+    background-color: rgb(202, 202, 233);
+    border-color: beige;
 }
